--- a/css/style.css
+++ b/css/style.css
@@ -234,10 +234,180 @@ span{
 }
 
 
+.portfolio{
+    background: var(--second-bg-color);
+
+}
+
+.portfolio h2{
+    margin-bottom: 4rem;
+}
+
+.portfolio-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    gap: 2.5rem;
+
+}
+.portfolio-container .portfolio-box{
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg--color);
+    overflow: hidden;
+    display: flex;
+
+
+}
+
+.portfolio-box img{
+    width: 100%;
+    transition: .5s ease;
+
+}
+.portfolio-box img:hover{
+    transform: scale(1.1);
+
+
+}
+.portfolio-box .portfolio-layer{
+
+
+    position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0,0,0,.1),var(--main-color));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  transform: translateY(100%);
+  transition: .5s ease;
 
 
 
 
+}
+.portfolio-box:hover .portfolio-layer{
+        
+    transform: translateY(0);
+
+
+}
+
+.portfolio-layer h4{
+    font-size: 3rem;
+
+}
+
+.portfolio-layer p{
+    font-size: 1.6rem;
+    margin: .3rem 0 1rem;
+
+}
+
+.portfolio-layer a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+.portfolio-layer a i{
+    font-size: 2rem;
+    color: var(--second-bg-color);
+
+}
+
+
+.contact h2{
+    margin-bottom: 2rem;
+
+}
+.contact form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+
+}
+
+.contact form .input-box{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background:var(--second-bg-color);
+    border-radius: 1rem;
+    margin: .7rem 0.3rem;
+
+}
+.contact form .input-box input{
+    width: 49%;
+}
+
+.contact form textarea{
+    resize: none;
+}
+.contact form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: .5rem 5%;
+    background: var(--second-bg-color);
+}
+
+.footer-text p{
+    font-size: 1.6rem;
+
+}
+
+.footer-icontop a{
+    display: inline-flex;
+    justify-content: right;
+    align-items: center;
+    padding: .8rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    transition: .1s ease;
+
+    
+}
+
+.footer-icontop a:hover{
+    box-shadow: 0 0 1rem var(--main-color);
+    transform: scale(1.3);
+}
+
+.footer-icontop a i{
+    font-size: 2.4rem;
+    color: var(--second-bg-color);
+}
+
+.contact .iconright{
+    justify-content: right;
+    display: flex;
+}
 
 
 
