--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,7 @@ span {
 
 .portfolio-box img {
     width: 100%;
+    height: 35vh;
     transition: .5s ease;
 
 }
@@ -397,6 +398,11 @@ span {
     font-size: 2rem;
     color: var(--second-bg-color);
 
+}
+
+.portfolio-container .project-heading{
+    color: #0efs
+;
 }
 
 
@@ -832,7 +838,7 @@ span {
 
         text-align: center;
         margin-top: 2rem;
-        
+
     }
 
 }
