--- a/css/certificate.css
+++ b/css/certificate.css
@@ -1,9 +1,36 @@
+
+* {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+
+    --bg--color: #1f242d;
+    --second-bg-color: #323946;
+    --text-color: #fff;
+    --main-color: #0ef;
+
+
+
+
+}
+
+
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-    background-color: #6b7fa4;
+    background-color: #1f242d;
     
+}
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+
 }
 
 header {
@@ -18,34 +45,69 @@ header {
     align-items: center;
     z-index: 100;
     color: aliceblue;
+    text-align: center;
 }
 
 header h1 {
+  
 	margin: 0;
+    font-size: 3rem;
+   
+
 }
 
-
-
-.main{
-    /* display: block; */
-    text-align: center;
-    align-items: center
-};
-
-section{
+.service-container img{
     width: 100%;
-    /* display: inline; */
 }
 
-section img {
-    margin-top: 5rem;
-    height: 50vh;
-	margin: 0 auto;
-	max-width: 50%;
-}
 
-.box{
-    border: 2px solid white;
-    /* display: block; */
+
+
+
+.service h2 {
+    margin-bottom: 5rem;
 
 }
+
+.service-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+
+}
+
+.service-container .service-box {
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg--color);
+    transition: .5s ease;
+
+}
+
+.service-container .service-box:hover {
+    border-color: var(--main-color);
+    transform: scale(1.04);
+}
+
+.service-box i {
+    font-size: 7rem;
+    color: var(--main-color);
+}
+
+.service-box h3 {
+    font-size: 2.6rem;
+}
+
+.service-box p {
+    font-size: 1.6rem;
+    margin: 3rem 0 3rem;
+}
+
+
